--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
 
 
 
-    <script type="text/javascript" src="script.js"></script>
+    <script type="text/javascript" src="./bundle.js"></script>
 </body>
 </html>
