--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body id="gradient">
     <form id="form" class="form">
-	<h1>COOL Generator</h1>
+	<h1>Background Generator</h1>
     <div>
         <label for="picker-1">Color 1:</label>
 	    <input class="color1" type="color" name="color1" value="#FF0000">
